tests/resource/valid/error/with.mamba
def do_something(x: Int) => print("hello world {x}")

def my_resource <- 10

with my_resource as other do
    do_something(other)

with my_resource as yet_another: Int do
    do_something(yet_another)

with my_resource do
    do_something(my_resource)
